...
            customAnnotation.address,
            customAnnotation.phone,
            customAnnotation.email
        ]
        
        serviceTableInMap.labels          =   [
            "Nom            : ",
            "Prénom         : ",
            "Nb de services : ",
            "Adresse        : ",
            "Téléphone      : ",
            "Email          : ",
            "Services       : "
        ]
        
        serviceTableInMap.services      =   services
...
