...
            } else {
                print("Error with the data.")
            }
            self.indicatorV.stopAnimating()
            self.stopAnimating(self.myAddress)
            self.geoLocMeIBOutlet.alpha             =   1.0
            self.geoLocMeIBOutlet.titleLabel!.text  =   "Localisez moi"
            self.view.userInteractionEnabled    =   true

        })
    }
    
    func locationManager(manager: CLLocationManager, didFailWithError error: NSError) {
...
