//
//  LHommeAToutFaireUITests.swift
//  LHommeAToutFaire
//
//  Created by Can ATAC on 25/10/2015.
//  Copyright © 2015 Can ATAC. All rights reserved.
//

import XCTest

class LHommeAToutFaireUITests: XCTestCase {
    
    override func setUp() {
        super.setUp()
       
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }

    func testExample() {
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        
        let app = XCUIApplication()
        app.buttons["Cr\U00e9er"].tap()
        app.alerts["Allow \U201cLHommeAToutFaire\U201d to access your location even when you are not using the app?"].collectionViews.buttons["Allow"].tap()
        
        let tablesQuery = app.tables
        tablesQuery.buttons["Localisez moi"].tap()
        tablesQuery.textFields["Pr\U00e9nom"].tap()
        tablesQuery.cells.containingType(.StaticText, identifier:"Pr\U00e9nom").childrenMatchingType(.TextField).element.typeText("can")
        tablesQuery.textFields["Nom"].tap()
        tablesQuery.cells.containingType(.StaticText, identifier:"Nom").childrenMatchingType(.TextField).element.typeText("aze")
        tablesQuery.textFields["Adresse"].tap()
        
    }

}
